--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
     "express": "^4.16.4",
     "method-override": "^3.0.0",
     "mongoose": "^5.3.2"
+    "version": "1.0.0",
+  "engines": {
+    "node": "10.11.0"
+  },
+  "description": "",
   }
 }
